--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -1,4 +1,4 @@
-/* filter (buttons) */
+/* filter (buttons-portfolio) */
 .filter .button {
   color: $second-text-color;
   background-color: #f5f4fa;
