--- a/css/main.css
+++ b/css/main.css
@@ -395,6 +395,12 @@ body {
   color: #2196f3;
 }
 
+.footer-contacts .logo {
+  margin-bottom: 20px;
+  display: block;
+  color: #ffffff;
+}
+
 .page-header .flexbox {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -530,6 +536,7 @@ hr {
 }
 
 .hero-title {
+  margin: 0 0 30px;
   color: #ffffff;
   font-weight: 900;
   font-size: 44px;
@@ -537,7 +544,6 @@ hr {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  margin: 0 0 30px;
 }
 
 /* features */
@@ -820,7 +826,10 @@ p .position {
   background-color: #2f303a;
 }
 
-.footer-contacts,
+.footer-contacts {
+  width: calc((100% - 3 * 30px) / 4);
+}
+
 .social-networks {
   width: calc((100% - 3 * 30px) / 4);
 }
@@ -834,11 +843,25 @@ p .position {
           justify-content: flex-start;
 }
 
-.footer-contacts .logo,
-.appeal {
-  margin-bottom: 20px;
-  display: block;
-  color: var(--second-accent-color);
+.social-networks .social-item:not(:last-child) {
+  margin-right: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.social-networks .social-link:hover, .social-networks .social-link:focus {
+  background-color: #2196f3;
+}
+
+.social-networks .social-icon {
+  fill: #ffffff;
+}
+
+.social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .contact {
@@ -849,22 +872,9 @@ p .position {
   margin-bottom: 9px;
 }
 
-.social-networks .social-item:not(:last-child) {
-  margin-right: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .contacts-margin {
   -ms-flex-line-pack: justify;
       align-content: space-between;
-}
-
-.social-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .footer .subscribe {
@@ -881,6 +891,9 @@ p .position {
 }
 
 .subscribe-field {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 360px;
   height: 50px;
   color: rgba(255, 255, 255, 0.6);
@@ -894,9 +907,6 @@ p .position {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   letter-spacing: 0.03em;
 }
 
@@ -945,14 +955,8 @@ p .position {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-}
-
-.social-networks .social-link:hover, .social-networks .social-link:focus {
-  background-color: #2196f3;
-}
-
-.social-networks .social-icon {
-  fill: #ffffff;
+  margin-bottom: 20px;
+  display: block;
 }
 
 visually-hidden {
@@ -984,6 +988,10 @@ visually-hidden {
   pointer-events: none;
 }
 
+.backdrop.is-hidden .modal {
+  opacity: 0;
+}
+
 .modal {
   position: absolute;
   top: 50%;
@@ -1011,10 +1019,6 @@ visually-hidden {
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden .modal {
-  opacity: 0;
 }
 
 .close-link {
