--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -393,6 +393,10 @@ body {
           align-items: center;
 }
 
+.menu-item {
+  position: relative;
+}
+
 .menu-item:not(:last-child) {
   margin-right: 50px;
 }
@@ -426,10 +430,6 @@ body {
   color: #2196f3;
 }
 
-.site-nav .link.current {
-  color: #2196f3;
-}
-
 .site-nav.list {
   list-style: none;
   display: -webkit-box;
@@ -437,8 +437,8 @@ body {
   display: flex;
 }
 
-.menu-item {
-  position: relative;
+.site-nav .link.current {
+  color: #2196f3;
 }
 
 .link.current::after {
@@ -505,7 +505,13 @@ hr {
   color: #2196f3;
 }
 
-/* filter (buttons) */
+.footer-contacts .logo {
+  margin-bottom: 20px;
+  display: block;
+  color: #ffffff;
+}
+
+/* filter (buttons-portfolio) */
 .filter .button {
   color: #212121;
   background-color: #f5f4fa;
@@ -554,25 +560,20 @@ hr {
 }
 
 .portfolio-title {
-  color: #212121;
+  margin: 0 0 4px 0;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  margin: 0 0 4px 0;
+  color: #212121;
 }
 
 .portfolio-type {
+  margin: 0;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
-  margin: 0;
-}
-
-.link {
-  text-decoration: none;
-  color: #757575;
 }
 
 .portfolio .list {
@@ -581,6 +582,11 @@ hr {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+.link {
+  text-decoration: none;
+  color: #757575;
 }
 
 .portfolio-item {
@@ -638,6 +644,11 @@ hr {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.portfolio-item:hover .portfolio-overlay {
+  -webkit-transform: translatey(0%);
+          transform: translatey(0%);
+}
+
 .text-overlay {
   display: inline;
   color: #ffffff;
@@ -645,11 +656,6 @@ hr {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-}
-
-.portfolio-item:hover .portfolio-overlay {
-  -webkit-transform: translatey(0%);
-          transform: translatey(0%);
 }
 
 .social-link {
@@ -721,7 +727,10 @@ visually-hidden {
   background-color: #2f303a;
 }
 
-.footer-contacts,
+.footer-contacts {
+  width: calc((100% - 3 * 30px) / 4);
+}
+
 .social-networks {
   width: calc((100% - 3 * 30px) / 4);
 }
@@ -735,11 +744,25 @@ visually-hidden {
           justify-content: flex-start;
 }
 
-.footer-contacts .logo,
-.appeal {
-  margin-bottom: 20px;
-  display: block;
-  color: var(--second-accent-color);
+.social-networks .social-item:not(:last-child) {
+  margin-right: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.social-networks .social-link:hover, .social-networks .social-link:focus {
+  background-color: #2196f3;
+}
+
+.social-networks .social-icon {
+  fill: #ffffff;
+}
+
+.social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .contact {
@@ -750,22 +773,9 @@ visually-hidden {
   margin-bottom: 9px;
 }
 
-.social-networks .social-item:not(:last-child) {
-  margin-right: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .contacts-margin {
   -ms-flex-line-pack: justify;
       align-content: space-between;
-}
-
-.social-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .footer .subscribe {
@@ -782,6 +792,9 @@ visually-hidden {
 }
 
 .subscribe-field {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 360px;
   height: 50px;
   color: rgba(255, 255, 255, 0.6);
@@ -795,9 +808,6 @@ visually-hidden {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   letter-spacing: 0.03em;
 }
 
@@ -846,13 +856,7 @@ visually-hidden {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-}
-
-.social-networks .social-link:hover, .social-networks .social-link:focus {
-  background-color: #2196f3;
-}
-
-.social-networks .social-icon {
-  fill: #ffffff;
+  margin-bottom: 20px;
+  display: block;
 }
 /*# sourceMappingURL=portfolio.css.map */
