--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -17,21 +17,22 @@
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
-}
-.hero .container {
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
-}
-.hero-title {
-  color: $second-accent-color;
 
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+  .container {
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+  }
 
-  margin: 0 0 30px;
+  &-title {
+    margin: 0 0 30px;
+
+    color: $second-accent-color;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+  }
 }
