--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,7 +13,11 @@
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+
+  .modal {
+    opacity: 0;
 }
+
 .modal {
   position: absolute;
   top: 50%;
@@ -38,9 +42,7 @@
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.backdrop.is-hidden .modal {
-  opacity: 0;
-}
+
 .close-link {
   position: absolute;
   top: 8px;
@@ -68,10 +70,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .form {
   display: flex;
   flex-direction: column;
 }
+
 .form-input {
   width: 100%;
   margin: 0;
@@ -82,6 +86,15 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.form-input {
+  .form-field:hover > &,
+  &:focus {
+    border: 1px solid $accent-color;
+    outline: none;
+  }
+}
+
 .icon-form {
   position: absolute;
   top: 50%;
@@ -92,6 +105,7 @@
   fill: #212121;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .form-field {
   position: relative;
   margin-bottom: 28px;
@@ -102,19 +116,12 @@
   }
 }
 
-.form-field:hover > .form-input,
-.form-input:focus,
-.textarea:hover,
-.textarea:focus {
-  border: 1px solid $accent-color;
-  outline: none;
-}
-
 .form-label {
   position: absolute;
   top: -18px;
   left: 0px;
 }
+
 .label {
   font-weight: 400;
   font-size: 12px;
@@ -122,6 +129,7 @@
   letter-spacing: 0.01em;
   color: #757575;
 }
+
 .modal-title {
   font-weight: 700;
   font-size: 20px;
@@ -129,6 +137,7 @@
   color: #212121;
   margin-bottom: 30px;
 }
+
 .textarea-field {
   display: flex;
   position: relative;
@@ -150,35 +159,47 @@
   padding: 12px 16px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &::placeholder {
-    color: $modal-textarea-colour;
+    &::placeholder {
+      color: $modal-textarea-colour;
+    }
+
+    &:hover,
+    &:focus {
+    border: 1px solid $accent-color;
+    outline: none;
+    }
+}
+
+.checkbox {
+  .textarea & {
+    display: block;
+    align-items: center;
+    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .label {
+    font-size: 14px;
+  }
+
+  &-input {
+    /* -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    position: absolute; */
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
   }
 }
-.textarea .checkbox {
-  display: block;
-  align-items: center;
-  margin-bottom: 30px;
-  margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.checkbox .label {
-  font-size: 14px;
-}
-.checkbox-input {
-  /* -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  position: absolute; */
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
+
 .checkbox-icon {
   display: inline-block;
   width: 18px;
@@ -189,19 +210,22 @@
   vertical-align: middle;
   background-color: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .checkbox-input:checked + & {
+    background-image: url(../images/icon_choose.svg);
+    background-repeat: no-repeat;
+    background-size: 15px;
+    background-position: center;
+    background-color: $accent-color;
+    border: none;
+  }
 }
-.checkbox-input:checked + .checkbox-icon {
-  background-image: url(../images/icon_choose.svg);
-  background-repeat: no-repeat;
-  background-size: 15px;
-  background-position: center;
-  background-color: $accent-color;
-  border: none;
-}
+
 .contract {
   text-decoration: underline;
   color: $accent-color;
 }
+
 .submit.button {
   padding: 10px 55px;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -209,6 +233,7 @@
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .submit.is-hidden {
   opacity: 0;
 }
