--- a/sass/components/_social-icons.scss
+++ b/sass/components/_social-icons.scss
@@ -21,10 +21,11 @@
   width: 20px;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-link:hover > .social-icon,
-.social-link:focus > .social-icon {
-  fill: $second-accent-color;
+
+  .social-link:hover > &,
+  .social-link:focus > & {
+    fill: $second-accent-color;
+  }
 }
 
 .social-list {
