--- a/css/main.css
+++ b/css/main.css
@@ -414,6 +414,10 @@ body {
           align-items: center;
 }
 
+.menu-item {
+  position: relative;
+}
+
 .menu-item:not(:last-child) {
   margin-right: 50px;
 }
@@ -447,10 +451,6 @@ body {
   color: #2196f3;
 }
 
-.site-nav .link.current {
-  color: #2196f3;
-}
-
 .site-nav.list {
   list-style: none;
   display: -webkit-box;
@@ -458,8 +458,8 @@ body {
   display: flex;
 }
 
-.menu-item {
-  position: relative;
+.site-nav .link.current {
+  color: #2196f3;
 }
 
 .link.current::after {
@@ -675,6 +675,15 @@ hr {
       flex-wrap: wrap;
 }
 
+.team-list .member-name {
+  color: #212121;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
 .team-item {
   width: calc((100% - 30px * 3) / 4);
   margin-right: 30px;
@@ -697,13 +706,8 @@ hr {
   text-align: center;
 }
 
-.team-list .member-name {
-  color: #212121;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
+.team-item .image {
+  display: block;
 }
 
 p .position {
@@ -712,10 +716,6 @@ p .position {
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-}
-
-.team-item .image {
-  display: block;
 }
 
 .social-link {
@@ -933,6 +933,7 @@ p .position {
 .footer .link {
   color: rgba(255, 255, 255, 0.6);
   font-weight: 400;
+  text-decoration: none;
 }
 
 .footer .adress {
@@ -1071,6 +1072,11 @@ visually-hidden {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form-field:hover > .form-input, .form-input:focus {
+  border: 1px solid #2196f3;
+  outline: none;
+}
+
 .icon-form {
   position: absolute;
   top: 50%;
@@ -1095,14 +1101,6 @@ visually-hidden {
 .form-field:hover > .icon-form,
 .form-field:focus ~ .icon-form {
   fill: #2196f3;
-}
-
-.form-field:hover > .form-input,
-.form-input:focus,
-.textarea:hover,
-.textarea:focus {
-  border: 1px solid #2196f3;
-  outline: none;
 }
 
 .form-label {
@@ -1169,6 +1167,11 @@ visually-hidden {
   color: rgba(117, 117, 117, 0.5);
 }
 
+.textarea:hover, .textarea:focus {
+  border: 1px solid #2196f3;
+  outline: none;
+}
+
 .textarea .checkbox {
   display: block;
   -webkit-box-align: center;
@@ -1186,9 +1189,9 @@ visually-hidden {
 
 .checkbox-input {
   /* -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  position: absolute; */
+    -moz-appearance: none;
+    appearance: none;
+    position: absolute; */
   position: absolute;
   width: 1px;
   height: 1px;
