--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -834,6 +834,7 @@ visually-hidden {
 .footer .link {
   color: rgba(255, 255, 255, 0.6);
   font-weight: 400;
+  text-decoration: none;
 }
 
 .footer .adress {
