--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -107,12 +107,15 @@
   .link {
     color: $footer-accent-text-colour;
     font-weight: 400;
+    text-decoration: none;
   }
+
   .adress {
     color: $second-accent-color;
     font-style: normal;
     font-weight: 400;
   }
+
   .social-link {
     background-color: $footer-social-background-colour;
     border-radius: 50%;
